* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - refactor
  - write on set value ? what about create ?
  - rename element_offset and equiv to element_data_offset

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20150104
* 2015 update

20141018
* changes for deployment

20141012
* worked on utility scripts

20140920
* changes for project site move

20140915
* worked on btree

20140914
* worked on btree
* worked on tests

20140913
* worked on btree

20140912
* worked on btree
* worked on tests
* worked on fcache integration

20140911
* worked on btree
* worked on tests

20140826
* bug fixes in include header

20140817
* worked on btree

20140809
* worked on vector

20140601
* updated dependencies

20140421
* worked on list

20140206
* changes in vector

20140205
* added libfdata_list_get_element_index_at_offset
* added libfdata_stream_get_segment_at_offset

20140130
* small fix in stream header file

20140126
* list fixed multi file caching issue

20140105
* 2014 update
* updated dependencies

20130929
* worked on tree and tree node
* updated dependencies

20130922
* worked on tree and tree node

20130915
* worked on tree and tree node

20130908
* updated dependencies
* fixed memory leak in error path
* updated msvscpp files
* added libcthreads build support

20130718
* remove unnecessary restriction in library include headers

20130616
* worked on reference

20130501
* worked on vector

20130427
* worked on vector

20130424
* worked on vector

20130422
* worked on vector

20130420
* fix for stream size calculation

20130411
* worked on range list

20130410
* worked on range list

20130409
* worked on range list
* optimized and fixed append list

20130408
* worked on range list
* list initial work on calculate_cache_entry_index callback

20130407
* worked on refactor to combine fdata and mfdata
* worked on range list
